--- a/aws/PTA-Single-Deployment.yaml
+++ b/aws/PTA-Single-Deployment.yaml
@@ -325,10 +325,9 @@ Parameters:
       - '12.2'
     Default: '12.6'
   CyberarkAccountId:
-    Type: Number
+    Type: String
     Description: Enter the CyberArk Account ID (AMI Owner account ID).
-    MinValue: 100000000000
-    MaxValue: 999999999999
+    AllowedPattern: ^[\d]{12}$
     ConstraintDescription: Account ID must contain 12 digits
   KeyName:
     Type: 'AWS::EC2::KeyPair::KeyName'
