Revert "psm service name change"
This reverts commit 3b4974fd9559e704fb03c6eb64936fba1585294f.

--- a/aws/Full-PAS-Deployment.yaml
+++ b/aws/Full-PAS-Deployment.yaml
@@ -1174,7 +1174,7 @@ Resources:
                 -VaultAdminUser Administrator -SSMAdminPassParameterID ${StoreAdminPassword.SsmId}
               waitAfterCompletion: 0
             3-PSMserviceConfig:
-              command: sc config "CyberArk Privileged Session Manager" start=auto
+              command: sc config "Cyber-Ark Privileged Session Manager" start=auto
               waitAfterCompletion: 0
         configSignal:
           commands:
