--- a/aws/Full-PAS-Deployment.yaml
+++ b/aws/Full-PAS-Deployment.yaml
@@ -805,6 +805,15 @@ Resources:
         - Key: Name
           Value: !Ref 'VaultInstanceName'
       SecurityGroupIds: !Ref 'VaultInstanceSecurityGroups'
+      BlockDeviceMappings:
+        - DeviceName: "/dev/sda1"
+          Ebs:
+            VolumeSize: 30
+            Encrypted: true
+        - DeviceName: "/dev/sdb"
+          Ebs:
+            VolumeSize: 30
+            Encrypted: true
       SubnetId: !Ref 'VaultInstanceSubnetId'
       ImageId: !Ref VaultAmi
       InstanceType: !Ref 'VaultInstanceType'
@@ -882,6 +891,10 @@ Resources:
       SecurityGroupIds: !Ref 'VaultInstanceSecurityGroups'
       BlockDeviceMappings:
         - DeviceName: "/dev/sda1"
+          Ebs:
+            VolumeSize: 30
+            Encrypted: true
+        - DeviceName: "/dev/sdb"
           Ebs:
             VolumeSize: 30
             Encrypted: true
