remove bucket creation and use partition param

--- a/aws/PTA-Single-Deployment.yaml
+++ b/aws/PTA-Single-Deployment.yaml
@@ -1,10 +1,6 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: This template handles the deployment of CyberArk PTA to an existing network infrastructure
 Resources:
-  DeployBucket:
-    Type: 'AWS::S3::Bucket'
-    Properties:
-      AccessControl: Private
   PTAAmi:
     Type: Custom::FindAMI
     Properties:
@@ -91,12 +87,7 @@ Resources:
                 Resource:
                   - !Join
                     - ''
-                    - - 'arn:aws:s3:::'
-                      - !Ref DeployBucket
-                      - /*
-                  - !Join
-                    - ''
-                    - - 'arn:aws:s3:::'
+                    - - !Sub 'arn:${AWS::Partition}:s3:::'
                       - !Ref PTALicenseBucket
                       - /*
         - PolicyName: DescribeImages
